--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>Made with <span class="footer-heart">💜</span> for lovers</p>
+            <p>💗 <span class="footer-heart">💜</span> | RAM BISHNOI</p>
         </footer>
     </div>
 
